--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.4",
+    "@vercel/node": "^3.0.0",
     "lucide-react": "^0.344.0",
     "posthog-js": "^1.266.0",
     "react": "^18.3.1",
