--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lucide-react": "^0.344.0",
     "posthog-js": "^1.266.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vercel": "^48.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
