add full response but without formatting yet

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "vercel": "npm run build:api && vercel dev",
     "build": "vite build",
     "build:api": "vite build --config vite.api.config.ts",
     "test": "vitest",
